[package]
name = "zkp_course"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
num-bigint = { version = "0.4", features = ["rand"] }
hex = "0.4.3"
tonic = "0.9"
prost = "0.11"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"


[build-dependencies]
tonic-build = "0.9"

[[bin]]
name = "server"
path = "./src/server/server.rs"

[[bin]]
name = "client"
path = "./src/client/client.rs"
